# agent-brain

./: .gitignore  main.py  pyproject.toml
agent_brain/: __init__.py  brain.py  models.py  tool.py
agent_brain/memory/: __init__.py  base.py  memory.py
agent_brain/net/: base.py
agent_brain/net/react/: __init__.py  net.py
agent_brain/states/: __init__.py  action.py  answer.py  base.py  reasoning.py  state_type.py
agent_brain/thinking_net/: __init__.py  base.py
agent_brain/thinking_net/react/: __init__.py  action.py  answer.py  reasoning.py
agent_brain/utils/: llm.py  parser.py
tests/: ToolHop1.json  add.py  add_multiply.py  ui.py
