[project]
name = "agent-brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.1",
]

[tool.ruff]
target-version = "py313"    # 你要支援的 Python 版本
line-length = 100
extend-exclude = ["deployment", ".venv"]

[tool.ruff.lint]
select = ["E","F","I","UP","B"]  # PEP8/flake8, import-sort, pyupgrade, bugbear …
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
