[project]
name = "agent-brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "json-repair>=0.51.0",
    "openai>=1.109.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.1",
    "streamlit>=1.50.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["deployment", ".venv"]

[tool.ruff.lint]
select = ["E","F","I","UP","B"]  # PEP8/flake8, import-sort, pyupgrade, bugbear …
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["agent_brain"]
